[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "createserial"
version = "1.4.2"
authors = [{ name = "Grayson Elias", email = "git@graysone.com" }]
description = "Simple upload utility for sending code to a Wombat in Python"
readme = "README.md"
dependencies = [
    "colorama",
    "pyserial"
]
requires-python = ">=3.9"

[project.urls]
"Homepage" = "https://github.com/Dead-Robots/PyUpload2Wombat"
"Bug Tracker" = "https://github.com/Dead-Robots/PyUpload2Wombat/issues"
